# dlup

./: .clang-format  .gitignore  README.md  meson.build  pyproject.toml  tox.ini
.github/workflows/: codecov.yml  mypy.yml  pylint.yml  tox.yml
.spin/: cmds.py
dlup/: __init__.py  _geometry.pyi  _image.py  annotations.py  annotations_experimental.py  background.py  geometry.py  meson.build  writers.py
dlup/annotations/: __init__.py  tags.py
dlup/annotations/exporters/: dlup_xml.py  geojson.py
dlup/annotations/importers/: asap_xml.py  darwin_json.py  dlup_xml.py  geojson.py  halo_xml.py
dlup/backends/: openslide_backend.py  pyvips_backend.py  tifffile_backend.py
dlup/data/: dataset.py  transforms.py
dlup/utils/: annotations_utils.py  geometry_xml.py  imports.py
dlup/utils/schemas/: dlup_schema_v1.0.xsd
examples/: annotations_to_mask.py
src/: geometry.cpp  image.h  libtiff_tiff_writer.cpp  meson.build  opencv.h
src/geometry/: base.h  box.h  collection.h  exceptions.h  factory.h  lazy_array.h  point.h  polygon.h  polygon_collection.h  region.h  rtree.h  utilities.h
src/tiff/: exceptions.h  writer.h
tests/: test_annotations.py  test_background.py  test_geometry.py  test_slide_annotations.py  test_transforms.py
tests/backends/: test_openslide_backend.py
tests/files/: dlup_xml_example.xml  halo_holes.annotations  test_different_types_halo.annotations
tests/utils/: test_annotation_utils.py
